Use compatible bridge class in Spring Core test